fix(quasar): Increase padding in QColorPicker to avoid scrollbar and fix off-by-one top
close #3245

--- a/quasar/src/components/color/color.styl
+++ b/quasar/src/components/color/color.styl
@@ -58,6 +58,9 @@
     width 100%
     height 100%
 
+    &-tab.q-tab-panel
+      padding 10px
+
   &__spectrum-white
     background linear-gradient(to right, white, rgba(255, 255, 255, 0))
 
